# oasys-notes

./: .gitignore  LICENSE  README.md  index.html  main.js  package-lock.json  package.json  preload.js  server.js  tsconfig.json  vite.config.ts
lib/: init-vault.js  notes.js
public/: app.js  index.html  style.css
schemas/: note.json  person.json  project.json
src/: main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  sync.rs  vault.rs
test/: engine.test.js  parse.test.js  server.test.js
