[package]
name = "oasys-notes"
version = "0.1.0"
description = "Local-first, Obsidian-style notes with typed structure, graph view, and self-hosted sync. Native Tauri app."
authors = ["Oliver"]
edition = "2021"

[lib]
name = "oasys_notes_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
regex = "1"
chrono = "0.4"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
